Fix - Integration Issue - Count API